--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,11 @@
           <artifactId>postgresql</artifactId>
           <version>42.6.0</version>
       </dependency>
+      <dependency>
+          <groupId>org.hibernate</groupId>
+          <artifactId>hibernate-core</artifactId>
+          <version>5.6.14.Final</version>
+      </dependency>
   </dependencies>
   <build>
     <finalName>JDBC</finalName>
@@ -27,8 +32,8 @@
               <groupId>org.apache.maven.plugins</groupId>
               <artifactId>maven-compiler-plugin</artifactId>
               <configuration>
-                  <source>7</source>
-                  <target>7</target>
+                  <source>8</source>
+                  <target>8</target>
               </configuration>
           </plugin>
       </plugins>
